Fixes Competition margin top value on mobile

--- a/src/components/competition/styles.scss
+++ b/src/components/competition/styles.scss
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: column;
   @include mobile {
-    margin: 20px 10px 10px 10px;
+    margin: 10px 10px;
   }
 }
 
